--- a/home.html
+++ b/home.html
@@ -16,20 +16,20 @@
 		<div class="row">
 			<div class="col sm-12 md-12 lg-12">
 				<div class="jumbotron">
-					<h1 class="display-4">Hello, world!</h1>
-					<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+					<h1 class="display-4 text-center"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
+					
 					<hr class="my-4">
-					<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-					<p class="lead">
-						<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-						<a class="btn btn-danger btn-lg" href="#" role="button">Learn more</a>
+					<h3 class="text-center"> We only have 5 tables! Book your seat before they're all gone!</h3>
+					<p class="lead text-center">
+						<a class="btn btn-primary btn-lg" href="#" ><span class="glyphicon glyphicon-list-alt"></span> View Tables</a>
+						<a class="btn btn-danger btn-lg" href="#" ><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</a>
 					</p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
-				<a href="http://">API Table Link</a>
+				<a href="http://">API Table Link | </a>
 				<a href="http://">Api Wait List</a>
 				<!-- <a href="http://">Clear Page</a> -->
 			</div>
