--- a/reservations.html
+++ b/reservations.html
@@ -16,8 +16,7 @@
 		<div class="row">
 			<div class="col sm-12 md-12 lg-12">
 				<div class="jumbotron">
-					<h1 class="display-4">Hello, world!</h1>
-					<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+					<h1 class="display-4 text-center"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
 					<hr class="my-4">
 					<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
 					<p class="lead">
@@ -53,7 +52,7 @@
 
 		<div class="row">
 			<div class="col">
-				<a href="http://">API Table Link</a>
+				<a href="http://">API Table Link | </a>
 				<a href="http://">Api Wait List</a>
 				<!-- <a href="http://">Clear Page</a> -->
 			</div>
