--- a/tables.html
+++ b/tables.html
@@ -16,13 +16,13 @@
 		<div class="row">
 			<div class="col sm-12 md-12 lg-12">
 				<div class="jumbotron">
-					<h1 class="display-4">Hello, world!</h1>
+					<h1 class="display-4 text-center"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
 					<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 					<hr class="my-4">
 					<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-					<p class="lead">
-						<a class="btn btn-primary btn-lg" href="#" role="button">Make Reservation</a>
-						<a class="btn btn-primary btn-lg" href="#" role="button">Home</a>
+					<p class="lead text-center">
+						<a class="btn btn-danger btn-lg" href="#" ><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</a>
+						<a class="btn btn-default btn-lg" href="#"><span class="glyphicon glyphicon-home"></span></a>
 					</p>
 				</div>
 			</div>
@@ -49,8 +49,8 @@
 
 		<div class="row">
 			<div class="col">
-				<a href="http://">API Table Link</a>
-				<a href="http://">Api Wait List</a>
+				<a href="http://">API Table Link | </a>
+				<a href="http://">Api Wait List | </a>
 				<a href="http://">Clear Page</a>
 			</div>
 		</div>
