--- a/reservations.html
+++ b/reservations.html
@@ -18,10 +18,10 @@
 				<div class="jumbotron">
 					<h1 class="display-4 text-center"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
 					<hr class="my-4">
-					<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-					<p class="lead">
-						<a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
-						<a class="btn btn-primary btn-lg" href="#" role="button">Home</a>
+					<h3 class="text-center">Make your reservation</h3>
+					<p class="lead text-center">
+						<a class="btn btn-primary btn-lg" href="#" ><span class="glyphicon glyphicon-list-alt"></span> View Tables</a>
+						<a class="btn btn-default btn-lg" href="#"><span class="glyphicon glyphicon-home"></span></a>
 					</p>
 				</div>
 			</div>
