--- a/home.html
+++ b/home.html
@@ -21,16 +21,16 @@
 					<hr class="my-4">
 					<h3 class="text-center"> We only have 5 tables! Book your seat before they're all gone!</h3>
 					<p class="lead text-center">
-						<a class="btn btn-primary btn-lg" href="#" ><span class="glyphicon glyphicon-list-alt"></span> View Tables</a>
-						<a class="btn btn-danger btn-lg" href="#" ><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</a>
+						<a class="btn btn-primary btn-lg" href="tables" ><span class="glyphicon glyphicon-list-alt"></span> View Tables</a>
+						<a class="btn btn-danger btn-lg" href="reservations" ><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</a>
 					</p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
-				<a href="http://">API Table Link | </a>
-				<a href="http://">Api Wait List</a>
+				<a href="/api/reserved">API Table Link | </a>
+				<a href="/api/waitlist">Api Wait List</a>
 				<!-- <a href="http://">Clear Page</a> -->
 			</div>
 		</div>
@@ -42,6 +42,7 @@
 
 	</div>
 	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 	 crossorigin="anonymous"></script>
 </body>
