--- a/tables.html
+++ b/tables.html
@@ -21,8 +21,8 @@
 					<hr class="my-4">
 					<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
 					<p class="lead text-center">
-						<a class="btn btn-danger btn-lg" href="#" ><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</a>
-						<a class="btn btn-default btn-lg" href="#"><span class="glyphicon glyphicon-home"></span></a>
+						<a class="btn btn-danger btn-lg" href="reservations" ><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</a>
+						<a class="btn btn-default btn-lg" href="/"><span class="glyphicon glyphicon-home"></span></a>
 					</p>
 				</div>
 			</div>
@@ -49,14 +49,15 @@
 
 		<div class="row">
 			<div class="col">
-				<a href="http://">API Table Link | </a>
-				<a href="http://">Api Wait List | </a>
-				<a href="http://">Clear Page</a>
+				<a href="/api/reserved">API Table Link | </a>
+				<a href="/api/waitlist">Api Wait List |</a>
+				<a href="#">Clear Page</a>
 			</div>
 		</div>
 
 	</div>
 	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 	 crossorigin="anonymous"></script>
 	 <script type="text/javascript">
